# angular-render-emails

./: README.md  WORKSPACE  docker-compose.yaml  package.json  tsconfig.json  tslint.json
libs/config/: BUILD.bazel  config.ts  generate-client-env.ts
libs/config/configs/: config.schema.json  dev.config.json  prod.config.json
libs/config/secrets/: example.secrets.json  secret.schema.json
libs/kubernetes/: ingress.yaml
services/client/: BUILD.bazel  main.html  manifest.webmanifest  server.ts  styles.sass  tsconfig.json
services/client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-prod.module.ts  app-routing.module.ts  app.component.sass  app.component.ts  service-worker.service.ts
services/client/assets/: BUILD.bazel
services/client/emails/: BUILD.bazel  emails.module.ts  welcome.component.html  welcome.component.sass  welcome.component.ts
services/server/: BUILD.bazel  index.ts  mailing.adapter.ts
tools/: rollup.config.js
